--- a/index.html
+++ b/index.html
@@ -2,94 +2,221 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>For My Valentine 💖</title>
+<title>Valentine Love Room 💖</title>
+
 <style>
 body{
   margin:0;
   font-family:Arial, sans-serif;
-  background:linear-gradient(#ffd6e7,#fff);
+  background:linear-gradient(#ffe4ec,#fff0f6,#fff);
   display:flex;
   justify-content:center;
   align-items:center;
-  height:100vh;
+  min-height:100vh;
   overflow:hidden;
   text-align:center;
+}
+
+.container{
+  width:100%;
+  max-width:500px;
+  position:relative;
 }
 
 .card{
   background:white;
   padding:40px;
-  border-radius:20px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.1);
+  border-radius:25px;
+  box-shadow:0 15px 40px rgba(0,0,0,0.15);
   position:relative;
 }
 
 button{
   padding:12px 25px;
-  font-size:18px;
   border:none;
   border-radius:30px;
+  font-size:16px;
   cursor:pointer;
   margin:10px;
 }
 
-.yes{
-  background:#e11d48;
+.primary{
+  background:#be123c;
   color:white;
-  transition:0.3s;
 }
 
 .no{
-  background:#ccc;
+  background:#ddd;
   position:absolute;
+}
+
+.hidden{
+  display:none;
 }
 
 .heart{
   position:absolute;
-  color:pink;
   animation:fall linear forwards;
+  color:#ff4d6d;
 }
 
 @keyframes fall{
   to{
-    transform:translateY(100vh);
+    transform:translateY(110vh);
     opacity:0;
   }
+}
+
+/* Envelope */
+.envelope{
+  width:260px;
+  height:160px;
+  position:relative;
+  margin:auto;
+}
+
+.envelope-back{
+  position:absolute;
+  width:100%;
+  height:100%;
+  background:white;
+  border-radius:15px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.2);
+}
+
+.flap{
+  position:absolute;
+  top:0;
+  width:100%;
+  height:80px;
+  background:#fecdd3;
+  border-radius:15px 15px 0 0;
+  transform-origin:top;
+  transition:transform 1s;
+}
+
+.letter{
+  margin-top:20px;
+  background:white;
+  padding:20px;
+  border-radius:20px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.15);
+  opacity:0;
+  transform:translateY(20px);
+  transition:all 0.8s ease 1s;
+}
+
+.show-letter{
+  opacity:1;
+  transform:translateY(0);
 }
 </style>
 </head>
 
 <body>
 
-<div class="card" id="screen">
-  <h1>Will you be my Valentine? ❤️</h1>
-  <button class="yes" onclick="yesClick()">Yes 💘</button>
+<div class="container">
+
+<!-- SCREEN 1 -->
+<div class="card" id="screen1">
+  <h2>Masukin password dulu yaa 💌</h2>
+  <p>Petunjuk kecil: tanggal yang nggak akan pernah aku lupa.</p>
+  <input type="password" id="passwordInput">
+  <p id="error" style="color:red;"></p>
+  <button class="primary" onclick="checkPassword()">Buka 💖</button>
+</div>
+
+<!-- SCREEN 2 -->
+<div class="card hidden" id="screen2">
+  <h2>Passwordnya bener... 🥹</h2>
+  <p>Kamu inget tanggal jadian kita. Itu bukan cuma angka buat aku.</p>
+  <button class="primary" onclick="goScreen(3)">Siap dong ✨</button>
+</div>
+
+<!-- SCREEN 3 -->
+<div class="card hidden" id="screen3" style="height:200px;">
+  <h2>Will you be my Valentine? ❤️</h2>
+  <button class="primary" id="yesBtn" onclick="goScreen(4)">Yes 💘</button>
   <button class="no" id="noBtn">No 🙈</button>
 </div>
 
-<script>
-let yesSize = 1;
-const noBtn = document.getElementById("noBtn");
+<!-- SCREEN 4 -->
+<div class="card hidden" id="screen4" style="background:#9f1239;color:white;">
+  <audio id="music" src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" loop></audio>
 
-noBtn.addEventListener("mouseover", ()=>{
-  const x = Math.random() * 200 - 100;
-  const y = Math.random() * 200 - 100;
-  noBtn.style.transform = `translate(${x}px,${y}px)`;
-  yesSize += 0.1;
-  document.querySelector(".yes").style.transform = `scale(${yesSize})`;
+  <h2>You are officially my Valentine 💖</h2>
+  <p>Sekarang waktunya buka hadiah kecil ini...</p>
+
+  <div id="giftBox">
+    <div style="font-size:50px;">🎁</div>
+    <button onclick="openGift()">Buka Hadiahnya 💌</button>
+  </div>
+
+  <div id="giftContent" class="hidden">
+    <div class="envelope">
+      <div class="envelope-back"></div>
+      <div class="flap" id="flap"></div>
+    </div>
+
+    <div class="letter" id="letter">
+      <p>Hi ayang, makasi ya udah hadir di hidup aku dan isi hari-hari aku jadi berwarna. Aku bahagia banget punya ayang. I love you with everything I have 💖</p>
+    </div>
+  </div>
+</div>
+
+</div>
+
+<script>
+let currentScreen = 1;
+let yesSize = 1;
+const correctPassword = "04112025";
+
+function goScreen(num){
+  document.getElementById("screen"+currentScreen).classList.add("hidden");
+  document.getElementById("screen"+num).classList.remove("hidden");
+  currentScreen = num;
+
+  if(num===4){
+    document.getElementById("music").play().catch(()=>{});
+    startHearts();
+  }
+}
+
+function checkPassword(){
+  const input = document.getElementById("passwordInput").value;
+  if(input === correctPassword){
+    goScreen(2);
+    document.getElementById("error").innerText="";
+  }else{
+    document.getElementById("error").innerText="Hmm... kayaknya salah deh 💭";
+  }
+}
+
+const noBtn = document.getElementById("noBtn");
+noBtn.addEventListener("mouseover",()=>{
+  const x = Math.random()*200-100;
+  const y = Math.random()*200-100;
+  noBtn.style.transform=`translate(${x}px,${y}px)`;
+  yesSize+=0.1;
+  document.getElementById("yesBtn").style.transform=`scale(${yesSize})`;
 });
 
-function yesClick(){
-  document.getElementById("screen").innerHTML = `
-    <h1>You are officially my Valentine 💖</h1>
-    <p>I love you more than words can say.</p>
-  `;
-  startHearts();
+function openGift(){
+  document.getElementById("giftBox").classList.add("hidden");
+  document.getElementById("giftContent").classList.remove("hidden");
+
+  setTimeout(()=>{
+    document.getElementById("flap").style.transform="rotateX(-180deg)";
+  },100);
+
+  setTimeout(()=>{
+    document.getElementById("letter").classList.add("show-letter");
+  },1200);
 }
 
 function startHearts(){
   setInterval(()=>{
-    const heart = document.createElement("div");
+    const heart=document.createElement("div");
     heart.classList.add("heart");
     heart.innerHTML="❤️";
     heart.style.left=Math.random()*100+"vw";
