--- a/index.html
+++ b/index.html
@@ -1,231 +1,185 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Valentine Love Room 💖</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Valentine 💖</title>
 
 <style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:linear-gradient(#ffe4ec,#fff0f6,#fff);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-  overflow:hidden;
-  text-align:center;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Georgia', serif;
+    background: linear-gradient(to top, #ffdde1, #ee9ca7);
+    overflow: hidden;
+    text-align: center;
 }
 
-.container{
-  width:100%;
-  max-width:500px;
-  position:relative;
+/* Love besar background */
+.big-heart {
+    position: absolute;
+    font-size: 200px;
+    color: rgba(255, 0, 100, 0.15);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: pulse 2s infinite;
 }
 
-.card{
-  background:white;
-  padding:40px;
-  border-radius:25px;
-  box-shadow:0 15px 40px rgba(0,0,0,0.15);
-  position:relative;
+@keyframes pulse {
+    0% { transform: translate(-50%, -50%) scale(1); }
+    50% { transform: translate(-50%, -50%) scale(1.1); }
+    100% { transform: translate(-50%, -50%) scale(1); }
 }
 
-button{
-  padding:12px 25px;
-  border:none;
-  border-radius:30px;
-  font-size:16px;
-  cursor:pointer;
-  margin:10px;
+/* Surat */
+.letter-container {
+    position: relative;
+    margin-top: 120px;
 }
 
-.primary{
-  background:#be123c;
-  color:white;
+.envelope {
+    width: 320px;
+    height: 220px;
+    background: #fff;
+    margin: auto;
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    cursor: pointer;
+    overflow: hidden;
 }
 
-.no{
-  background:#ddd;
-  position:absolute;
+.flap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #ff6f91;
+    clip-path: polygon(0 0, 50% 50%, 100% 0);
+    transition: transform 1s;
+    transform-origin: top;
 }
 
-.hidden{
-  display:none;
+.letter {
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    background: #fff0f5;
+    top: 5%;
+    left: 5%;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 1s ease 1s;
+    font-size: 16px;
+    line-height: 1.6;
+    color: #c2185b;
 }
 
-.heart{
-  position:absolute;
-  animation:fall linear forwards;
-  color:#ff4d6d;
+.open .flap {
+    transform: rotateX(180deg);
 }
 
-@keyframes fall{
-  to{
-    transform:translateY(110vh);
-    opacity:0;
-  }
+.open .letter {
+    opacity: 1;
 }
 
-/* Envelope */
-.envelope{
-  width:260px;
-  height:160px;
-  position:relative;
-  margin:auto;
+/* Love jatuh */
+.falling-heart {
+    position: absolute;
+    color: #ff2e63;
+    font-size: 24px;
+    animation: fall linear infinite;
 }
 
-.envelope-back{
-  position:absolute;
-  width:100%;
-  height:100%;
-  background:white;
-  border-radius:15px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.2);
+@keyframes fall {
+    0% { transform: translateY(-10vh); }
+    100% { transform: translateY(110vh); }
 }
 
-.flap{
-  position:absolute;
-  top:0;
-  width:100%;
-  height:80px;
-  background:#fecdd3;
-  border-radius:15px 15px 0 0;
-  transform-origin:top;
-  transition:transform 1s;
+/* Bunga */
+.flower {
+    position: absolute;
+    font-size: 30px;
+    animation: float 6s infinite ease-in-out;
 }
 
-.letter{
-  margin-top:20px;
-  background:white;
-  padding:20px;
-  border-radius:20px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.15);
-  opacity:0;
-  transform:translateY(20px);
-  transition:all 0.8s ease 1s;
+@keyframes float {
+    0%,100% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
 }
 
-.show-letter{
-  opacity:1;
-  transform:translateY(0);
+h1 {
+    margin-top: 40px;
+    color: #b30059;
+    font-size: 28px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div class="big-heart">❤️</div>
 
-<!-- SCREEN 1 -->
-<div class="card" id="screen1">
-  <h2>Masukin password dulu yaa 💌</h2>
-  <p>Petunjuk kecil: tanggal yang nggak akan pernah aku lupa.</p>
-  <input type="password" id="passwordInput">
-  <p id="error" style="color:red;"></p>
-  <button class="primary" onclick="checkPassword()">Buka 💖</button>
-</div>
+<h1>For My Sweet Valentine 💌</h1>
 
-<!-- SCREEN 2 -->
-<div class="card hidden" id="screen2">
-  <h2>Passwordnya bener... 🥹</h2>
-  <p>Kamu inget tanggal jadian kita. Itu bukan cuma angka buat aku.</p>
-  <button class="primary" onclick="goScreen(3)">Siap dong ✨</button>
-</div>
-
-<!-- SCREEN 3 -->
-<div class="card hidden" id="screen3" style="height:200px;">
-  <h2>Will you be my Valentine? ❤️</h2>
-  <button class="primary" id="yesBtn" onclick="goScreen(4)">Yes 💘</button>
-  <button class="no" id="noBtn">No 🙈</button>
-</div>
-
-<!-- SCREEN 4 -->
-<div class="card hidden" id="screen4" style="background:#9f1239;color:white;">
-  <audio id="music" src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" loop></audio>
-
-  <h2>You are officially my Valentine 💖</h2>
-  <p>Sekarang waktunya buka hadiah kecil ini...</p>
-
-  <div id="giftBox">
-    <div style="font-size:50px;">🎁</div>
-    <button onclick="openGift()">Buka Hadiahnya 💌</button>
-  </div>
-
-  <div id="giftContent" class="hidden">
-    <div class="envelope">
-      <div class="envelope-back"></div>
-      <div class="flap" id="flap"></div>
+<div class="letter-container">
+    <div class="envelope" onclick="openLetter(this)">
+        <div class="flap"></div>
+        <div class="letter">
+            <p>
+            Hi ayang, makasi ya udah hadir di hidup aku dan isi hari-hari aku yang suram ini jadi berwarna. 
+            Kehadiran ayang selalu punya arti tersendiri buat aku. 
+            Aku bahagia banget punya ayang. 
+            Tolong cintai aku terus yaa. 
+            I love you with everything I have. 💖
+            </p>
+        </div>
     </div>
-
-    <div class="letter" id="letter">
-      <p>Hi ayang, makasi ya udah hadir di hidup aku dan isi hari-hari aku jadi berwarna. Aku bahagia banget punya ayang. I love you with everything I have 💖</p>
-    </div>
-  </div>
 </div>
 
-</div>
+<!-- Musik otomatis -->
+<audio autoplay loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
+</audio>
 
 <script>
-let currentScreen = 1;
-let yesSize = 1;
-const correctPassword = "04112025";
-
-function goScreen(num){
-  document.getElementById("screen"+currentScreen).classList.add("hidden");
-  document.getElementById("screen"+num).classList.remove("hidden");
-  currentScreen = num;
-
-  if(num===4){
-    document.getElementById("music").play().catch(()=>{});
-    startHearts();
-  }
+function openLetter(element) {
+    element.classList.toggle("open");
 }
 
-function checkPassword(){
-  const input = document.getElementById("passwordInput").value;
-  if(input === correctPassword){
-    goScreen(2);
-    document.getElementById("error").innerText="";
-  }else{
-    document.getElementById("error").innerText="Hmm... kayaknya salah deh 💭";
-  }
-}
-
-const noBtn = document.getElementById("noBtn");
-noBtn.addEventListener("mouseover",()=>{
-  const x = Math.random()*200-100;
-  const y = Math.random()*200-100;
-  noBtn.style.transform=`translate(${x}px,${y}px)`;
-  yesSize+=0.1;
-  document.getElementById("yesBtn").style.transform=`scale(${yesSize})`;
-});
-
-function openGift(){
-  document.getElementById("giftBox").classList.add("hidden");
-  document.getElementById("giftContent").classList.remove("hidden");
-
-  setTimeout(()=>{
-    document.getElementById("flap").style.transform="rotateX(-180deg)";
-  },100);
-
-  setTimeout(()=>{
-    document.getElementById("letter").classList.add("show-letter");
-  },1200);
-}
-
-function startHearts(){
-  setInterval(()=>{
-    const heart=document.createElement("div");
-    heart.classList.add("heart");
-    heart.innerHTML="❤️";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(Math.random()*20+20)+"px";
-    heart.style.animationDuration=(Math.random()*3+3)+"s";
+/* Love jatuh */
+function createHeart() {
+    const heart = document.createElement("div");
+    heart.classList.add("falling-heart");
+    heart.innerHTML = "❤️";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
     document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),6000);
-  },400);
+
+    setTimeout(() => {
+        heart.remove();
+    }, 5000);
 }
+
+setInterval(createHeart, 300);
+
+/* Bunga random */
+function createFlower() {
+    const flower = document.createElement("div");
+    flower.classList.add("flower");
+    flower.innerHTML = "🌸";
+    flower.style.left = Math.random() * 100 + "vw";
+    flower.style.top = Math.random() * 100 + "vh";
+    document.body.appendChild(flower);
+
+    setTimeout(() => {
+        flower.remove();
+    }, 6000);
+}
+
+setInterval(createFlower, 2000);
 </script>
 
 </body>
